--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "npm link @angular/cli && ng build --aot --prod"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -25,10 +25,10 @@
     "zone.js": "~0.10.3",
     "typescript": "~3.9.5",
     "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2"
+    "@angular/compiler-cli": "~10.0.2",
+    "@angular-devkit/build-angular": "~0.1000.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
