--- a/client/angular.json
+++ b/client/angular.json
@@ -119,7 +119,13 @@
           "configurations": {
             "production": {
               "devServerTarget": "client:serve:production"
-            }
+            },
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }
+            ]
           }
         }
       }
